# Noir

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  pyproject.toml
.github/: ci.yml  precommit.yml
.github/workflows/: ci.yml  precommit.yml  release.yml
example/: CMakeLists.txt  play_noir.cpp
include/: optimizer_util.h  robot.h  robot_joint.h  sensor.h
src/: CMakeLists.txt  optimizer_util.cpp  readme.md  robot.cpp  robot_joint.cpp  sensor.cpp
test/: CMakeLists.txt  robot_joint_test.cpp  robot_test.cpp  sensor_test.cpp  test_optimizer_util.cpp  test_robot.cpp  test_robot_joint.cpp
