[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numerical-optimization-for-robotics"
version = "0.1"
description = "Codebase for Numerical Optimization for Robotics"
authors = [
    {name = "Yuki Shirai", email = "yukishirai1926@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.3",
    "Jinja2>=3.1.2",
    "pre-commit>=3.5.0",
    "omegaconf>=2.3.0",
    "parameterized>=0.9.0",
]

[project.urls]
"Homepage" = "https://sites.google.com/view/yukishirai/"
"GitHub" = "https://github.com/YukiShirai/Noir"

[tool.setuptools]
packages = [
    "noirpy", # fast contact model
]

[tool.pip]
minimum-version = "25.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when --fix) is provided.
fixable = ["ALL"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 110
target-version = "py310"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'
preview = true
